# petaurus

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  dysonsphere.toml  gallery.html  pyproject.toml
.github/workflows/: pages.yml  publish.yml
docs/: index.html
dysonsphere/: __init__.py  export.py  layers.py  marks.py  metadata.py  multilabel.py  nonlinear.py  palettes.py  statistics.py  theme.py  transforms.py  utils.py
gallery/: boxplot.py  gallery.html  scatter.py  violin.py
scripts/: build_all.py  build_gallery.py  import_palettes_to_illustrator.jsx
scripts/illustrator/: dysonsphere.ase  export_swatches_to_illustrator.py  import_dysonsphere_palettes_to_illustrator.jsx
scripts/plot/: arc.py  area_chart.py  area_chart_gradient.py  beeswarm.py  boxplot.py  bubble.py  errorband.py  geomark.py  heatmap.py  histogram.py  line.py  p-value.py  paired.py  palette_test.py  ridgeplot.py  scatter.py  sequences.py  stacked_bar_chart.py  strip.py  violin.py  volcano.py
scripts/plots/: arc.py  area_chart.py  area_chart_gradient.py  beeswarm.py  boxplot.py  bubble.py  double-x.py  double-y.py  errorband.py  geomark.py  heatmap.py  histogram.py  line.py  logarithmic.py  p-value.py  paired.py  palette_test.py  power.py  reference_lines.py  ridgeplot.py  scatter.py  sequences.py  (+6 more)
tests/: conftest.py  test_export.py  test_layers.py  test_marks.py  test_metadata.py  test_multilabel.py  test_nonlinear.py  test_palettes.py  test_statistics.py  test_theme.py  test_transforms.py  test_utils.py
theme/: __init__.py  colors.py  helpers.py  layers.py  palettes.py  theme.py
