[project]
name = "petaurus"
version = "0.3.1"
description = "Custom Altair/Vega-Lite themes, perceptually uniform palettes, and chart utilities for publication-ready scientific figures."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "dkkung", email = "128324842+dkkung@users.noreply.github.com" }]
keywords = ["altair", "vega-lite", "visualization", "color", "palette", "theme", "oklab"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "numpy>=1.26.0",
    "polars>=1.19.0",
    "scipy>=1.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "vl-convert-python>=1.7.0",
]

[project.urls]
Repository = "https://github.com/dkkung/petaurus"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["petaurus"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
